[package]
name = "codecrafters-claude-code"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.93"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] } 
async-openai = { version = "=0.32.4", features = ["byot", "chat-completion"] }
clap = { version = "4.3.14", features = ["derive"] }              
serde_json = "1.0.149"                                                
serde = "1.0.228"
async-trait = "0.1"